syntax = "proto3";

option csharp_namespace = "CAT";

package CAT;

// The greeting service definition.
service CAT {
	rpc TMExists (TMExistsRequest) returns (TMExistsResponse);
	rpc CreateTM (CreateTMRequest) returns (EmptyResponse);
//    rpc GetTMInfo (GetTMInfoRequest) returns (TMInfoResponse);
//    rpc GetTMList (GetTMListRequest) returns (TMListResponse);
}

message EmptyResponse {
}

//TMExists
message TMExistsRequest {
  string tmId = 1;
}

message TMExistsResponse {
  bool exists = 1;
}

//CreateTM
message CreateTMRequest {
  string tmId = 1;
}
